--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,6 +140,9 @@
       <a href="/" style="">
         <img src="/img/header.svg" alt="Heuristics for Parity" width="40%">
       </a>
+      <h2 class="project-tagline" style="margin-top: 0; color: #fab1a0; margin-block-end: 0.4em !important;">
+        a parenting blog
+      </h2>
     </header>
 
     <main id="content" class="main-content" role="main">
