--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,7 +10,7 @@ $header-bg-color-secondary: #2d3436 !default;
 // Text
 $section-headings-color: #2d3436 !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #fab1a0 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
