--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,8 +140,14 @@
       <a href="/" style="">
         <img src="/img/header.svg" alt="Heuristics for Parity" width="40%">
       </a>
-      <h2 class="project-tagline" style="margin-top: 0; color: #fab1a0; margin-block-end: 0.4em !important;">
-        a parenting blog
+      <h2 class="project-tagline"
+          style="margin-top: 0;
+                  color: #fab1a0;
+                  margin-block-end: 0.4em !important;
+                  font-family: 'Arial Black';
+                  font-style: italic;
+        ">
+        Strategies for Equitable Parenting
       </h2>
     </header>
 
