--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -32,6 +32,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: $body-text-color;
+  background-color: rgba(85, 239, 196, 0.1);
 }
 
 #skip-to-content {
@@ -109,7 +110,7 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  //background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
   padding: 0.5rem;
 }
 
@@ -169,7 +170,7 @@ a {
   @include small {
     font-size: 1rem;
   }
-  
+
   kbd {
     background-color: #fafbfc;
     border: 1px solid #c6cbd1;
